add structure "img"

--- a/general_website/static/general_website/css/bm-charts.css
+++ b/general_website/static/general_website/css/bm-charts.css
@@ -350,11 +350,28 @@
 /* Styling radar chart */
 /* ------------------- */
 
+/* ---------------------------------- */
+/* | bm-radar-root                  | */
+/* | ------------------------------ | */
+/* | | bm-radar-top               | | */
+/* | ------------------------------ | */
+/* | ------------------------------ | */
+/* | | bm-radar-center            | | */
+/* | | -------------------------- | | */
+/* | | | Ratio | Radar | Maxima | | | */
+/* | | -------------------------- | | */
+/* | ------------------------------ | */
+/* ---------------------------------- */
 .bm-radar-root {
+    justify-content: center;
+}
+
+.bm-radar-center {
     display: flex;
     flex-direction: row;
     column-gap: 1.1rem;
 }
+
 
 .bm-radar-background {
     fill: none;
