adds trinket compare feature

--- a/general_website/templates/general_website/chart_information/class_and_spec_information_importer.html
+++ b/general_website/templates/general_website/chart_information/class_and_spec_information_importer.html
@@ -1,14 +1,18 @@
-{% with class_name=wow_class|add:".html" %}
-<div>
-    {% include 'general_website/chart_information/wow_class/'|add:class_name %}
-</div>
-{% endwith %}
+{% if wow_class %}
+    {% with class_name=wow_class|add:".html" %}
+        <div>
+            {% include 'general_website/chart_information/wow_class/'|add:class_name %}
+        </div>  
+    {% endwith %}
 
-{% with class_spec_name=wow_class|add:"_"|add:wow_spec|add:".html" %}
-<div>
-    {% include 'general_website/chart_information/wow_spec/'|add:class_spec_name %}
-</div>
-{% endwith %}
+    {% if wow_spec %}
+        {% with class_spec_name=wow_class|add:"_"|add:wow_spec|add:".html" %}
+        <div>
+            {% include 'general_website/chart_information/wow_spec/'|add:class_spec_name %}
+        </div>
+        {% endwith %}
+    {% endif %}
+{% endif %}
 
 {% comment %}
 example import of simulation type and spec specific disclaimer
