--- a/general_website/templates/general_website/layout/nav_top.html
+++ b/general_website/templates/general_website/layout/nav_top.html
@@ -21,6 +21,8 @@
                     {% translate "Windfury Totem" %}</a>
                 <a class="nav-link" href="{% url 'chart_power_infusion' %}"><span style="color:aqua">🌞</span>
                     {% translate "Power Infusion" %}</a>
+                <a class="nav-link" href="{% url 'chart_trinket' %}"><span style="color:aqua">💎</span>
+                    {% translate "Trinkets" %}</a>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="{% url 'tears' %}">{% translate "Meme" %}</a>
                 </li> -->
