add elemental shaman trinket disclaimer

--- a/general_website/templates/general_website/chart_information/class_and_spec_information_importer.html
+++ b/general_website/templates/general_website/chart_information/class_and_spec_information_importer.html
@@ -36,3 +36,7 @@ example import of simulation type and spec specific disclaimer
 {% if general_result and simulation_type == "tier_set" and wow_class == "death_knight" and wow_spec == "blood" %}
 {% include 'general_website/chart_information/disclaimers/tier_set_death_knight_blood.html' %}
 {% endif %}
+
+{% if simulation_type == "trinkets" and wow_class == "shaman" and wow_spec == "elemental" %}
+{% include 'general_website/chart_information/disclaimers/trinkets_shaman_elemental.html' %}
+{% endif %}
